--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ a {
 #wrapper {
   padding: 30px;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-image: url(./img/pexels-nathan-engel-50858-436413.jpg);
   background-position: center;
   background-size: cover;
